# vershachi-unlearning

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  notes-for-dev.md  pyproject.toml  requirements-3-10.txt  requirements-dev.txt  requirements.txt  run.py  setup.py
.github/workflows/: docker-publish.yml  python-publish.yml
datasets/: check_datasets.py  dataloader.py  dataset_subset_creation.py  datasetfile  datasets.txt  print_datasets.py  sample_dataset.py
docs/: Research paper analysis for project presentation  Research.md  algorithms.md  docker.md  notes-for-dev.md  research.md  synopsis.md  todo
examples/: check_dataset.py  check_dataset_classes.py  command.txt  example_compute_kl_distance.py  example_distribution.py  example_fed_unlearn.py  example_generate_report.py  example_plot_kl_distance_mean.py  example_preprocessing.py  example_requestfile_check.py  example_sisa.py  example_sisa_test.py  example_sisa_train.py  example_vbu_run.py  general-report.csv
models/: custom_model.py  purchase.py  svhn.py
variational-bayesian-unlearning/: commands.txt  compute_kl_distance.py  gp_utils.py  model.py  plot_kl_distance_mean_std.py  plot_moon_marginal_prob.py  req.txt  run.py
vershachi/federated_unlearning/: FedLearnBase.py  data_preprocess.py  fed_learn_base.py  fed_unlearn_base.py  membership_inference.py  model_initialization.py
vershachi/sisa/: aggregation.py  distribution.py  preprocessing.py  sharded.py  sisa.py  time.py
vershachi/variational_bayesian/: approximate_post.py  compute_kl_distance.py  model.py  model_config.py  plot_kl_distance_mean.py  run.py  unlearn.py  utils.py
