[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vershachi"
version = "0.1.0"
description = "Vershachi is a Python-based toolkit designed to streamline the development of machine learning and unlearning applications."
authors = [
    {name = "mo_shahab", email = "mohdshahabuddinsoharwardi@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["machine learning", "unlearning", "toolkit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
url = "https://github.com/mo-shahab/vershachi-unlearning"
project-urls = {Documentation = "https://github.com/mo-shahab/vershachi-unlearning/"}

[project.dependencies]
python = "^3.10"
numpy = "^1.21.5"
pandas = "^1.3.5"
scikit-learn = "^1.4.1"
torch = "^1.10.1"
